Recieved Templates from Brittany Tress.

--- a/templates/passport/event_list.html
+++ b/templates/passport/event_list.html
@@ -1,10 +1,11 @@
 {% extends 'passport/base.html' %}
 
-{%block body %}
+{%block mainContent %}
 
 <div id="list" >
 	{% for event in object_list %}
-		{{ event }}
+		<a href="{% url passport.views.event_detail event.id %}">{{ event }}</a>
+		
 	{% endfor %}
 </div>
 
