Added fields to model

--- a/templates/passport/venue_detail.html
+++ b/templates/passport/venue_detail.html
@@ -8,31 +8,29 @@
 <h1>{{object.name}}</h1>
 	<div id="vencolright">
 		<h3>Hours of Operation</h3>
-		<p>Monday-Friday: 9am-5pm<br/>
-		Saturday-Sunday: 11am-4pm</p>
+		<p>Monday-Friday: {{object.weekday_hours}}<br/>
+		Saturday-Sunday: {{object.weekend_hours }}</p>
 		<h3>Cost</h3>
-		<p>Varies.</p></div>
+		<p>${{object.cost}}</p></div>
 		<div id="vencolleft">
-			<div id="venuepic">
-				<img src="media/article_temp.jpg" border="0" width="220" height="220"/>
+					<div id="venuepic">
+				<img src="/media/images/article_temp.jpg" border="0" width="220" height="220"/>
 			</div>
-		215-555-5555<br/>
-	<a href="#">http://www.venueurl.com</a>
+		{{object.phone}}<br/>
+
+	<a href="{{object.url}}">{{object.url}}</a>
 	<h3>Location</h3>
 	<p>
-		{{object.address}}
+		{{object.address}}<br />
+		{{object.city}},{{object.state}},{{object.zip}}<br />
 	</p>
+
  <p><br class="clearfloat" />
 	</p> 
 	 <h3>About</h3>
-		
-	<p>
-
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in leo justo, et venenatis odio. Vivamus nibh arcu, porttitor ac vulputate a, condimentum quis orci. Integer ut sapien ante. Proin convallis, dui a tincidunt mollis, neque dui mollis neque, quis tincidunt quam ante ut mi. Nunc justo quam, eleifend quis dapibus sit amet, ultrices eu ante. Integer at urna id odio placerat elementum. Nulla a pharetra nisi. In hac habitasse platea dictumst. Donec nec tincidunt massa. Nullam scelerisque elit nec sapien pretium sit amet mattis quam ullamcorper.
-</p><p>
-Etiam dapibus faucibus eros, vitae fermentum sapien dictum quis. Maecenas velit ipsum, dignissim feugiat eleifend ac, commodo vitae lectus. Sed blandit dolor nec nisl ullamcorper semper. Donec tempus viverra augue quis dignissim. Suspendisse placerat placerat augue non ornare. Mauris mattis, eros ac eleifend auctor, neque odio blandit diam, quis ultrices neque felis ut velit. Ut ultrices pulvinar porttitor. Donec eget tellus id est aliquet condimentum eget id sapien. Donec non diam et metus tempor semper vitae vitae eros. Vivamus eget mi vitae diam euismod dictum vel ut nunc. Suspendisse potenti. Suspendisse condimentum, tellus eu venenatis bibendum, quam dui semper augue, at facilisis urna nisl eu urna. Nullam eu quam eget quam faucibus aliquet. Curabitur a augue tellus. Aliquam mi nisl, vehicula sit amet feugiat auctor, molestie id libero. Morbi sit amet odio sit amet nulla congue venenatis. Praesent ac justo vitae orci fermentum luctus non eu mauris. Cras ultricies condimentum nulla, id adipiscing magna fringilla eget. </p>
+	<p>{{object.about_text}}</p>
 <h3>Student Perspectives</h3>
-<p>Etiam dapibus faucibus eros, vitae fermentum sapien dictum quis. Maecenas velit ipsum, dignissim feugiat eleifend ac, commodo vitae lectus. Sed blandit dolor nec nisl ullamcorper semper. Donec tempus viverra augue quis dignissim. Suspendisse placerat placerat augue non ornare. Mauris mattis, eros ac eleifend auctor, neque odio blandit diam, quis ultrices neque felis ut velit. Ut ultrices pulvinar porttitor. Donec eget tellus id est aliquet condimentum eget id sapien. Donec non diam et metus tempor semper vitae vitae eros. Vivamus eget mi vitae diam euismod dictum vel ut nunc. Suspendisse potenti. Suspendisse condimentum, tellus eu venenatis bibendum, quam dui semper augue, at facilisis urna nisl eu urna. Nullam eu quam eget quam faucibus aliquet. Curabitur a augue tellus. Aliquam mi nisl, vehicula sit amet feugiat auctor, molestie id libero. Morbi sit amet odio sit amet nulla congue venenatis. Praesent ac justo vitae orci fermentum luctus non eu mauris. Cras ultricies condimentum nulla, id adipiscing magna fringilla eget. </p></div>
-
+	<p>{{object.student_perspectives_text}}</p>
+</div>
 	<!-- end #mainContent -->
 {% endblock %}
