Calendar feature complete

--- a/templates/passport/base.html
+++ b/templates/passport/base.html
@@ -92,8 +92,8 @@ style="border-width: 0pt;" class="nudge hover"> </a> </div>
 href="index.html">Home</a></td>
                   <td id="m2"
  class=""><a href="#">About</a></td>
-                  <td id="m3" class=""><a href="#">Institutions</a></td>
-                  <td id="m4" class=""><a href="#">Calendar</a></td>
+                  <td id="m3" class=""><a href="{% url passport.views.venue_list %}">Institutions</a></td>
+                  <td id="m4" class=""><a href="{% url passport.views.event_calendar %}">Calendar</a></td>
                   <td id="m5" class=""><a href="#">Columns</a></td>
                 </tr>
               </tbody>
