--- a/templates/passport/venue_list.html
+++ b/templates/passport/venue_list.html
@@ -1,5 +1,5 @@
 {% extends 'passport/base.html' %}
-{%block body %}
+{%block leftcolsub %}
 
 	{% for venue in object_list %}
 	<div id='map_{{venue.id}}' class="venuemap">
