--- a/templates/passport/event_detail.html
+++ b/templates/passport/event_detail.html
@@ -1,9 +1,8 @@
 {% extends 'passport/base.html' %}
 
-{%block body %}
+{%block leftcolsub %}
 
-<div id="main" >
+<div id="eventinfo">
 	{{ event }}
 </div>
-
 {% endblock %}
