--- a/templates/passport/base.html
+++ b/templates/passport/base.html
@@ -89,7 +89,7 @@ style="border-width: 0pt;" class="nudge hover"> </a> </div>
               <tbody>
                 <tr>
                   <td id="m1" class="first active"><a class="active" 
-href="index.html">Home</a></td>
+href="/">Home</a></td>
                   <td id="m2"
  class=""><a href="#">About</a></td>
                   <td id="m3" class=""><a href="{% url passport.views.venue_list %}">Institutions</a></td>
