--- a/templates/passport/venue_detail.html
+++ b/templates/passport/venue_detail.html
@@ -37,7 +37,7 @@
 		<p>${{object.cost}}</p></div>
 		<div id="vencolleft">
 					<div id="venuepic">
-				<img src="/media/images/article_temp.jpg" border="0" width="220" height="220"/>
+				<img src="{{ MEDIA_URL }}{{object.pic}}" border="0" width="220" height="220"/>
 			</div>
 		{{object.phone}}<br/>
 
