--- a/templates/passport/venue_list.html
+++ b/templates/passport/venue_list.html
@@ -1,13 +1,34 @@
 {% extends 'passport/base.html' %}
 {%block leftcolsub %}
 
-	{% for venue in object_list %}
-	<div id='map_{{venue.id}}' class="venuemap">
-		
-		{{ venue }}
-		<a href="http://maps.google.com/maps?&q={{venue.apiaddr}}"><img src="http://maps.google.com/maps/api/staticmap?zoom=14&markers={{venue.apiaddr}}&size=200x200&sensor=false
-"/></a>
-	</div>
+	{% for object in object_list %}
+		<h1>{{object.name}}</h1>
+	<div id="vencolright">
+		<h3>Hours of Operation</h3>
+		<p>Monday-Friday: {{object.weekday_hours}}<br/>
+		Saturday-Sunday: {{object.weekend_hours }}</p>
+		<h3>Cost</h3>
+		<p>${{object.cost}}</p></div>
+		<div id="vencolleft">
+					<div id="venuepic">
+				<img src="{{ MEDIA_URL }}{{object.pic}}" border="0" width="220" height="220"/>
+			</div>
+		{{object.phone}}<br/>
+
+	<a href="{{object.url}}">{{object.url}}</a>
+	<h3>Location</h3>
+	<p>
+		{{object.address}}<br />
+		{{object.city}},{{object.state}},{{object.zip}}<br />
+	</p>
+
+ <p><br class="clearfloat" />
+	</p> 
+	 <h3>About</h3>
+	<p>{{object.about_text}}</p>
+<h3>Student Perspectives</h3>
+	<p>{{object.student_perspectives_text}}</p>
+</div>
 	{% endfor %}
 {% endblock %}
 
