--- a/templates/passport/event_list.html
+++ b/templates/passport/event_list.html
@@ -1,11 +1,17 @@
 {% extends 'passport/base.html' %}
 
 {%block leftcolsub %}
-
-<div id="list" >
-	{% for event in object_list %}
-		<a href="{% url passport.views.event_detail event.id %}">{{ event }}</a><br />
-	{% endfor %}
+{% for event in object_list %}
+<div class="articleblock">
+	<div class="articlepic">
+		<img height='120' width='120' src='{{MEDIA_URL}}{{event.pic}}'/>
+	</div>
+    <div class="articletxt">
+    	<div class="articlelead"><a href="{% url passport.views.event_detail event.id %}">{{event.name}} at {{event.venue}}</a></div>
+    	<div class="leadbyline">{{event.date|date:"N j, Y, P"}}</div>
+    	<p>Cost: ${{event.cost}}</p>
+    	<p>
+    </div>
 </div>
-
+{% endfor%}
 {% endblock %}
