--- a/templates/passport/base.html
+++ b/templates/passport/base.html
@@ -109,7 +109,7 @@ style="border-width: 0pt;" class="nudge hover"> </a> </div>
 			<div id="subticheader"> <a href="#">Sign Up for E-Tickets</a></div>
 			<!--this will Automatically generate the most recent events.-->
 			<div id="subticlist">
-			{% cache 30*60 events %}
+			{% cache 3600 events %}
 			{% load passport_tags %}
 			{%block eventlist%}
 				{% latest_events %}
@@ -129,7 +129,7 @@ style="border-width: 0pt;" class="nudge hover"> </a> </div>
 	 <p><br class="clearfloat" />
 		</p>
 				<!--in the news-->
-			{% cache 60*60 newsblock %}
+			{% cache 3600 newsblock %}
 			<div id="related">
 				<h3>Related Content</h3>
 				<ul>
@@ -178,7 +178,7 @@ alt="Drexel University" width="117" height="16"></a> <img src="/media/images/foo
     </div>
     <div class="ddm m5">
       <ul class="dm">
-      {% cache 60*60*12 navmenu %}
+      {% cache 3600 navmenu %}
         {% load cache pages_tags %}
 		{% load_pages %}
 		{% for page in pages_navigation %}
