Map that uses AJAX to get the list of venues and populates them on the map.

--- a/templates/passport/base.html
+++ b/templates/passport/base.html
@@ -173,7 +173,7 @@ alt="Drexel University" width="117" height="16"></a> <img src="/media/images/foo
       <ul class="dm">
         <li class="first"><a href="{% url passport.views.event_list %}">Performances and E-Tickets</a></li>
         <li><a href="{% url passport.views.venue_list %}">Museums and Visiting Centers</a></li>
-        <li><a href="#">Institution Map</a></li>
+        <li><a href="{% url passport.views.map %}">Institution Map</a></li>
       </ul>
     </div>
     <div class="ddm m5">
