--- a/templates/passport/index.html
+++ b/templates/passport/index.html
@@ -1,4 +1,22 @@
 {% extends "passport/base.html" %}
 {% block leftcolsub %}
+{% load pages_tags %}
+
+
+{% for article in article_list %}
+<div class="articleblock">
+	<div class="articlesec_{{article.get_root.title|lower}}">
+			<a style="font-size:18px;text-decoration:underline;color:#FFF " href="{% show_absolute_url article.get_root %}">{{article.get_root.title}}</a>
+	</div>
+	<div class="articlepic">
+		<img height='120' width='120' src='/media/{% show_content article "body-image" %}'/>
+	</div>
+    <div class="articletxt">
+    	<div class="articlelead"><a href="{% show_absolute_url article %}">{{article.title}}</a></div>
+    	<div class="leadbyline">By {{article.author.first_name}} {{article.author.last_name}}</div>
+    	<span class="leadbody"">{% show_content article "subheading"%} </span>
+    </div>
+</div>
+{% endfor %}
 
 {% endblock %}
