--- a/templates/passport/event_detail.html
+++ b/templates/passport/event_detail.html
@@ -1,24 +1,7 @@
 {% extends "passport/base.html" %}
-{% block head %}
-<script type="text/javascript"
-	src="http://maps.google.com/maps/api/js?sensor=false">
-</script>
-<script type="text/javascript">
-	var map;
-  function initialize() {
-    var latlng = new google.maps.LatLng(-34.397, 150.644);
-    var myOptions = {
-      zoom: 8,
-      center: latlng,
-      mapTypeId: google.maps.MapTypeId.ROADMAP
-    };
-    var map = new google.maps.Map(document.getElementById("map_canvas"),
-        myOptions);
-  }
 
-</script>
-
-{% endblock%}
+{%block eventlist%}
+{% endblock %}
 {% block rightcolsub%}
 <h3>Directions</h3>
 <a href="http://maps.google.com/maps?&q={{event.venue.apiaddr}}"><img
@@ -28,7 +11,7 @@
 <h1>{{event.name}} at {{event.venue.name}}</h1>
 <div id="vencolright">
 	<h3>Cost</h3>
-	<p>${{event.cost}} / ticket</p>
+	<p>{{event.cost}}</p>
 </div>
 <div id="vencolleft">
 	<div id="venuepic">
